--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -11,13 +11,13 @@ on:
     branches: [main]
 
 jobs:
-  schema:
+  verify:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: apt-get update -y && apt-get install -yy --no-install-recommends python3-jsonschema python3-jinja2
+        run: python3 -m pip install -r requirements.txt
 
       - name: Verify data files against schema
         run: ./verify_schema.sh
